--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-world",
+  "name": "study-buddy",
   "version": "0.9.0",
   "description": "alexa utility for quickly building skills",
   "main": "index.js",
@@ -11,6 +11,7 @@
   "dependencies": {
     "ask-sdk-core": "^2.0.7",
     "ask-sdk-model": "^1.4.1",
-    "aws-sdk": "^2.326.0"
+    "aws-sdk": "^2.326.0",
+    "lodash": "^4.17.11"
   }
 }
